<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".fragment_details">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/produitImage"
            android:layout_width="310dp"
            android:layout_height="278dp"
            android:layout_marginTop="8dp"
            android:contentDescription="Product Image"
            android:scaleType="fitCenter"
            app:shapeAppearanceOverlay="@style/RoundedImage" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <TextView
            android:id="@+id/produitTitre"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/hint_titre"
            android:textSize="34sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/produitPrix"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginStart="8dp"
            android:text="@string/hint_prix"
            android:textSize="28sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/produitArtiste"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:text="@string/hint_artist"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/produitDescription"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:text="Description du produit"
            android:textColor="#333333"
            android:textSize="20sp" />
    </LinearLayout>

    <Button
        android:id="@+id/button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#9EC5E4"
        android:text="@string/btn_contacterVendeur"
        android:textColor="#B21B1A1A"
        android:textColorHighlight="#499ADA"
        android:textColorHint="#472B2B"
        android:textColorLink="#869CAE"
        android:textIsSelectable="false"
        android:textSize="24sp"
        app:iconPadding="15dp"
        app:iconSize="20dp" />

</LinearLayout>
